ASUSFETest/src/objects/Plan__c.object
<CustomObject>
    <description>Listing of all Graduate Plans (majors)</description>
    <fields>
        <fullName>ASU_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This program is managed by ASU Online</description>
        <inlineHelpText>If this box is checked, the program is managed by ASU Online.</inlineHelpText>
        <label>ASU Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship created to associate the opportunity to the correct Account (college) to assist in reporting</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plan_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Career__c</fullName>
        <label>Career</label>
        <picklist>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undergraduate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Degree_Level__c</fullName>
        <description>Degree level of respective academic plan</description>
        <label>Degree Level</label>
        <picklist>
            <picklistValues>
                <fullName>Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juris Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Degree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Relationship to the Org table (schools and departments)</description>
        <label>Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Code__c</fullName>
        <externalId>true</externalId>
        <label>Plan Code</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plan_Effective_Date__c</fullName>
        <label>Plan Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Location__c</fullName>
        <label>Plan Location</label>
        <picklist>
            <picklistValues>
                <fullName>Downtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lake Havasu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tempe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teach Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>CER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Plan</label>
    <listViews>
        <fullName>ASU_Online_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Program__c</columns>
        <columns>Plan_Location__c</columns>
        <columns>Plan_Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Location__c</field>
            <operation>includes</operation>
            <value>Online</value>
        </filters>
        <filters>
            <field>ASU_Online__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>ASU Online Managed</label>
    </listViews>
    <listViews>
        <fullName>All_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Degree_Level__c</columns>
        <columns>Organization__c</columns>
        <columns>Program__c</columns>
        <columns>Plan_Location__c</columns>
        <columns>ASU_Online__c</columns>
        <columns>Plan_Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Plans</label>
    </listViews>
    <listViews>
        <fullName>Certificate_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Plan_Location__c</columns>
        <columns>Plan_Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Organization__c</columns>
        <columns>Program__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Type__c</field>
            <operation>equals</operation>
            <value>CER</value>
        </filters>
        <label>Certificate Plans</label>
        <sharedTo>
            <role>GE_Grad_Edu</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coll_Technology_Innovation</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Coll Technology &amp; Innovation</value>
        </filters>
        <label>Coll Technology &amp; Innovation</label>
        <sharedTo>
            <roleAndSubordinates>Coll_Tech_Innovation</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Doctoral_Programs</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Plan_Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Degree_Level__c</field>
            <operation>equals</operation>
            <value>Doctoral</value>
        </filters>
        <label>Doctoral Programs</label>
        <sharedTo>
            <role>GE_Grad_Edu</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Graduate_College</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Graduate College</value>
        </filters>
        <label>Graduate College</label>
        <sharedTo>
            <roleAndSubordinates>ES_Health_Solutions</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Health_Solutions</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>ASU_Online__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Health Solutions</value>
        </filters>
        <label>Health Solutions</label>
        <sharedTo>
            <roleAndSubordinates>ES_Health_Solutions</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Herberger_Institute</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Herberger Institute</value>
        </filters>
        <label>Herberger Institute</label>
        <sharedTo>
            <roleAndSubordinates>Coll_Tech_Innovation</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ira_A_Fulton_Engineering</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Ira A Fulton Engineering</value>
        </filters>
        <label>Ira A Fulton Engineering</label>
        <sharedTo>
            <roleAndSubordinates>ES_Coll_Pub_Programs</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Liberal_Arts_Sciences</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Liberal Arts &amp; Sciences</value>
        </filters>
        <label>Liberal Arts &amp; Sciences</label>
        <sharedTo>
            <roleAndSubordinates>Coll_Tech_Innovation</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Major_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Plan_Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Type__c</field>
            <operation>equals</operation>
            <value>MAJ</value>
        </filters>
        <label>Major Plans</label>
        <sharedTo>
            <role>GE_Grad_Edu</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MaryLouFulton_Teachers_College</fullName>
        <columns>ASU_Online__c</columns>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Degree_Level__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>MaryLouFulton Teachers College</value>
        </filters>
        <label>MaryLouFulton Teachers College</label>
        <sharedTo>
            <roleAndSubordinates>ES_Teachers_College</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Masters_Programs</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Plan_Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Degree_Level__c</field>
            <operation>equals</operation>
            <value>Masters</value>
        </filters>
        <label>Masters Programs</label>
        <sharedTo>
            <role>GE_Grad_Edu</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Interdis_Arts_Sciences</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>New Interdis Arts &amp; Sciences</value>
        </filters>
        <label>New Interdis Arts &amp; Sciences</label>
        <sharedTo>
            <roleAndSubordinates>ES_Health_Solutions</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_Degree_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Plan_Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Program__c</columns>
        <columns>Organization__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Type__c</field>
            <operation>equals</operation>
            <value>NDG</value>
        </filters>
        <label>Non-Degree Plans</label>
        <sharedTo>
            <role>GE_Grad_Edu</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>